fix(notification-drawer): align list item header baseline

--- a/src/patternfly/components/NotificationDrawer/notification-drawer.scss
+++ b/src/patternfly/components/NotificationDrawer/notification-drawer.scss
@@ -201,6 +201,7 @@
 
 .pf-c-notification-drawer__list-item-header {
   display: flex;
+  align-items: baseline;
   grid-row: 1 / 2;
   margin-bottom: var(--pf-c-notification-drawer__list-item-header--MarginBottom);
 }
